--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
     <script src="calc.js" defer></script>
 </head>
 <body>
+    <div class="container">
+        <div class="calc-container">
+            <div class="screen">hello</div>
+            <div class="buttons">
+                <div class="numberPad">
+                    <button class = 'digit' id="one">1</button>
+                    <button class = 'digit' id="two">2</button>
+                    <button class = 'digit' id="three">3</button>
+                    <button class = 'digit' id="four">4</button>
+                    <button class = 'digit' id="five">5</button>
+                    <button class = 'digit' id="six">6</button>
+                    <button class = 'digit' id="seven">7</button>
+                    <button class = 'digit' id="eight">8</button>
+                    <button class = 'digit' id="nine">9</button>
+                    <button class = 'digit' id="zero">0</button>
+                </div>
+                <div class="operators">
+                    <button id="add">+</button>
+                    <button id="subtract">-</button>
+                    <button id="multiply">*</button>
+                    <button id="divide">/</button>
+                    <button id="clear">C</button>
+                    <button id="equals">=</button>
+                </div>
+            </div>
+        </div>
 
+
+    </div>
 
 </body>
 </html>
