--- a/index.html
+++ b/index.html
@@ -10,35 +10,30 @@
 </head>
 <body>
     <div class="container">
-        <div class="calc-container">
-            <div class="screen">
-                <div id="previousInput">upper</div>
-                <div id="currentInput">lower</div>
-            </div>
-            <div class="buttons">
-                <button class ="clearOperator" id="clear">C</button>
-                <button class ="delOperator" id="delete">DEL</button>
-                <button class ="equalsOperator" id="equals">=</button>
-                <button class ="digit" id="one">1</button>
-                <button class ="digit" id="two">2</button>
-                <button class ="digit" id="three">3</button>
-                <button class ="operator" id="add">+</button>
-                <button class ="digit" id="four">4</button>
-                <button class ="digit" id="five">5</button>
-                <button class ="digit" id="six">6</button>
-                <button class ="operator" id="subtract">-</button>
-                <button class ="digit" id="seven">7</button>
-                <button class ="digit" id="eight">8</button>
-                <button class ="digit" id="nine">9</button>
-                <button class ="operator" id="multiply">*</button>
-                <button class ="digit" id="period">.</button>
-                <button class ="digit" id="zero">0</button>
-                <button class="operator" id="divide">/</button>
-            </div>
+        <div class="screen">
+            <div id="displayTop">top</div>
+            <div id="displayBottom">bottom</div>
         </div>
-
-
+        <div class="buttons">
+            <div class="operator" id="delete">DEL</div>
+            <div class="operator" id="allClear">AC</div>
+            <div class="operator" id="equals">=</div>
+            <div class="digit">1</div>
+            <div class="digit">2</div>
+            <div class="digit">3</div>
+            <div class="operator">+</div>
+            <div class="digit">4</div>
+            <div class="digit">5</div>
+            <div class="digit">6</div>
+            <div class="operator">-</div>
+            <div class="digit">7</div>
+            <div class="digit">8</div>
+            <div class="digit">9</div>
+            <div class="operator">/</div>
+            <div class="operator" id="zero">0</div>
+            <div class="digit">.</div>
+            <div class="operator">*</div>
+        </div>
     </div>
-
 </body>
 </html>
