--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
             <div id="displayBottom">bottom</div>
         </div>
         <div class="buttons">
-            <div class="operator" id="delete">DEL</div>
-            <div class="operator" id="allClear">AC</div>
-            <div class="operator" id="equals">=</div>
-            <div class="digit">1</div>
-            <div class="digit">2</div>
-            <div class="digit">3</div>
-            <div class="operator">+</div>
-            <div class="digit">4</div>
-            <div class="digit">5</div>
-            <div class="digit">6</div>
-            <div class="operator">-</div>
-            <div class="digit">7</div>
-            <div class="digit">8</div>
-            <div class="digit">9</div>
-            <div class="operator">/</div>
-            <div class="operator" id="zero">0</div>
-            <div class="digit">.</div>
-            <div class="operator">*</div>
+            <button class="operator" id="delete">DEL</button>
+            <button class="operator" id="allClear">AC</button>
+            <button class="operator" id="equals">=</button>
+            <button class="digit">1</button>
+            <button class="digit">2</button>
+            <button class="digit">3</button>
+            <button class="operator">+</button>
+            <button class="digit">4</button>
+            <button class="digit">5</button>
+            <button class="digit">6</button>
+            <button class="operator">-</button>
+            <button class="digit">7</button>
+            <button class="digit">8</button>
+            <button class="digit">9</button>
+            <button class="operator">/</button>
+            <button class="operator" id="zero">0</button>
+            <button class="digit">.</button>
+            <button class="operator">*</button>
         </div>
     </div>
 </body>
