--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div class="container">
         <div class="screen">
-            <div id="displayTop">top</div>
-            <div id="displayBottom">bottom</div>
+            <div id="displayTop"></div>
+            <div id="displayBottom"></div>
         </div>
         <div class="buttons">
-            <button class="operator" id="delete">DEL</button>
-            <button class="operator" id="allClear">AC</button>
-            <button class="operator" id="equals">=</button>
+            <button id="delete">DEL</button>
+            <button id="allClear">AC</button>
+            <button id="equals">=</button>
             <button class="digit">1</button>
             <button class="digit">2</button>
             <button class="digit">3</button>
@@ -25,12 +25,12 @@
             <button class="digit">4</button>
             <button class="digit">5</button>
             <button class="digit">6</button>
-            <button class="operator">-</button>
+            <button class="operator">–</button>
             <button class="digit">7</button>
             <button class="digit">8</button>
             <button class="digit">9</button>
             <button class="operator">/</button>
-            <button class="operator" id="zero">0</button>
+            <button class="digit" id="zero">0</button>
             <button class="digit">.</button>
             <button class="operator">*</button>
         </div>
