--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="digit">4</button>
             <button class="digit">5</button>
             <button class="digit">6</button>
-            <button class="operator">–</button>
+            <button class="operator">-</button>
             <button class="digit">7</button>
             <button class="digit">8</button>
             <button class="digit">9</button>
